--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <meta
+    name="description"
+    content="New era experience"
+  />
     <title>New Era Experience</title>
     <style>
       * {
@@ -16,6 +20,7 @@
         padding: 0;
         font-family: "Oswald", sans-serif;
         box-sizing: border-box;
+        scroll-behavior: smooth;
       }
     </style>
   </head>
