--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="New Era experience" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="../src/assets/logo-title.png" rel="stylesheet" />
     <meta
-    name="description"
-    content="New era experience"
-  />
+      name="description"
+      content="¡Reviví tu pasión y gana premios todos los meses!"
+    />
+
     <title>New Era Experience</title>
+    <link rel="icon" type="image/x-icon" href="./logo.png" />
+
     <style>
       * {
         margin: 0;
